fixed alignment and added dropdown

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,8 @@
 body {
-	padding: 50px;
+	padding: 10px;
+	width: 95%;
+	margin-left: auto;
+	margin-right: auto;
 	font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
